--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<app-navbar></app-navbar>
 
 <div class="container">
     <app-header></app-header>
-    <app-products></app-products>
+    <router-outlet></router-outlet> 
     <app-footer></app-footer>
-   
-
 </div>
+
